@@ -119,11 +119,10 @@ Your mileage may vary, but these scripts provide a good starting point.
 
 
 <h4>Version 2.5.0, the last version before the transition to Sollya4 broke everything that bit heaps had not yet broken</h4>
-See the <a href="install_scripts/install-.sh">the install script</a>, that it tested to work in Ubuntu 12.04, aka "precise".
+See the <a href="install_scripts/install-2.5.0-on-precise.sh">the install script</a>, that it tested to work in Ubuntu 12.04, aka "precise".
 
 <h4>Version 2.3.2, the last version before the Great Leader embarked the project in the bit heap hazardous adventure</h4>
-TODO: wrap this in a virtual machine for future generations.
-<p><kbd>yes | sudo apt-get install g++ libgmp3-dev libmpfr-dev libxml2-dev bison libmpfi-dev flex cmake libboost-all-dev libgsl0-dev && wget https://gforge.inria.fr/frs/download.php/file/34429/libfplll-3.0.12.tar.gz && tar xzf libfplll-3.0.12.tar.gz && cd libfplll-3.0.12/ && ./configure && make -j2  && sudo make install && cd .. && wget https://gforge.inria.fr/frs/download.php/28571/sollya-3.0.tar.gz && tar xzf sollya-3.0.tar.gz && cd sollya-3.0/ && ./configure && make -j4  && sudo make install && cd .. && wget https://gforge.inria.fr/frs/download.php/file/35206/flopoco-2.3.2.tgz  && tar xzf flopoco-2.3.2.tgz && cd flopoco-2.3.2/ && cmake . && make -j4  && ./flopoco</kbd></p>
+See the <a href="install_scripts/install-2.3.2-on-precise.sh">the install script</a>, that it tested to work in Ubuntu 12.04, aka "precise".
 
 <h4>Older versions may include operators that have later been deprecated. Look up the <a href="https://gforge.inria.fr/scm/?group_id=1030">source code repository</a></h4>
 
