@@ -14,5 +14,5 @@ wget https://gforge.inria.fr/frs/download.php/28571/sollya-3.0.tar.gz && tar xzf
 #wget https://gforge.inria.fr/frs/download.php/31858/flopoco-2.4.0.tgz && gunzip < flopoco-2.4.0.tgz | tar xvf - && cd flopoco-2.4.0/ && cmake . && make -j2
 wget https://gforge.inria.fr/frs/download.php/file/32591/flopoco-2.5.0.tgz && gunzip < flopoco-2.5.0.tgz | tar xvf - && cd flopoco-2.5.0/ && cmake . && make -j2
 
-# Now show the list of operators
-./flopoco  
+# Now show the list of operators -- disabled because it doesn't return 0, hence breaks docker install
+#./flopoco  
